docs/api/qiskit/0.43/qiskit.quantum_info.XXDecomposer.md
---
title: XXDecomposer
description: API reference for qiskit.quantum_info.XXDecomposer
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.XXDecomposer
---

# XXDecomposer

<span id="qiskit.quantum_info.XXDecomposer" />

`XXDecomposer(basis_fidelity=1.0, euler_basis='U', embodiments=None, backup_optimizer=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/quantum_info/synthesis/xx_decompose/decomposer.py "view source code")

Bases: `object`

A class for optimal decomposition of 2-qubit unitaries into 2-qubit basis gates of XX type (i.e., each locally equivalent to CAN(alpha, 0, 0) for a possibly varying alpha).

**Parameters**

*   **basis\_fidelity** (*dict | float*) – available strengths and fidelity of each. Can be either (1) a dictionary mapping XX angle values to fidelity at that angle; or (2) a single float f, interpreted as \{pi: f, pi/2: f/2, pi/3: f/3}.
*   **euler\_basis** (*str*) – Basis string provided to OneQubitEulerDecomposer for 1Q synthesis. Defaults to “U”.
*   **embodiments** (*dict\[float,* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*] | None*) – A dictionary mapping interaction strengths alpha to native circuits which embody the gate CAN(alpha, 0, 0). Strengths are taken so that pi/2 represents the class of a full CX.
*   **backup\_optimizer** (*Callable\[...,* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")*] | None*) – If supplied, defers synthesis to this callable when XXDecomposer has no efficient decomposition of its own. Useful for special cases involving 2 or 3 applications of XX(pi/2), in which case standard synthesis methods provide lower 1Q gate count.

<Admonition title="Note" type="note">
  If `embodiments` is not passed, or if an entry is missing, it will be populated as needed using the method `_default_embodiment`.
</Admonition>

## Methods

<span id="qiskit-quantum-info-xxdecomposer-num-basis-gates" />

### num\_basis\_gates

<span id="qiskit.quantum_info.XXDecomposer.num_basis_gates" />

`XXDecomposer.num_basis_gates(unitary)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/quantum_info/synthesis/xx_decompose/decomposer.py "view source code")

Counts the number of gates that would be emitted during re-synthesis.

NOTE: Used by ConsolidateBlocks.

